--- a/website/index.html
+++ b/website/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First CI/CD Website</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Awesome Project</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>🚀 Hello from GitHub Actions CI/CD!</h1>
-  <p>This website was automatically deployed using GitHub Pages.</p>
-</body>
-</html>
+    <header>
+        <div class="container">
+            <h1>My Awesome Project</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section id="hero" class="hero-section">
+            <div class="container">
+                <h2>Welcome to a New Beginning</h2>
+                <p>This is a beautifully crafted webpage, deployed with GitHub Actions!</p>
+                <a href="#features" class="btn">Learn More</a>
+            </div>
+        </section>
+
+        <section id="about" class="content-section">
+            <div class="container">
+                <h3>About Our Vision</h3>
+                <p>We believe in simplicity, functionality, and elegant design. Our goal is to create impactful solutions that are easy to use and delightful to experience. This project serves
